# advent-of-code

./: .gitignore  README.md
2023/typescript/: README.md  bun.lockb  package.json
2023/typescript/src/: day-1.ts  day-2.ts
2024/c++/: CMakeLists.txt
2024/c++/.cache/clangd/index/: main.cpp.EA1E991DC1F07065.idx
2024/c++/src/: main.cpp
2024/c++/src/days/1/: solver.cpp  solver.h
2024/c++/src/days/2/: solver.cpp  solver.h
